# grc

./: .gitignore  CMakeLists.txt  LICENSE  README.md  premake5.lua
examples/: foo.g
src/: ast.hpp  log.cpp  log.h  main.cpp  tokenizer.cpp  tokenizer.h  tokenizer.hpp  utils.cpp  utils.hpp
src/hir/: expr.hpp  mir_codegen.cpp  mir_codegen.hpp  semantic_analyser.cpp  semantic_analyser.hpp
src/mir/: expr.hpp  optimizations.cpp  optimizations.hpp
src/parser/: hir_codegen.cpp  hir_codegen.hpp  parser_ast.cpp  parser_ast.hpp  parser_symbol.cpp  parser_symbol.hpp  semantic_analyser.cpp  semantic_analyser.hpp  symbol_table.hpp
